--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,11 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+* {
+  box-sizing: border-box;
+}
+
+@media (prefers-color-scheme: white) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
