--- a/components/Search/search.module.scss
+++ b/components/Search/search.module.scss
@@ -14,6 +14,11 @@
   z-index: -1;
 }
 .content {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  border-radius: 8px;
+  padding-inline-end: 20px;
   width: 50%;
   input {
     width: 100%;
@@ -21,5 +26,9 @@
     border-radius: 8px;
     text-indent: 20px;
     font-size: 32px;
+  }
+  .searchIcon {
+    font-size: 42px;
+    cursor: pointer;
   }
 }
