--- a/app/detail/[id]/food-detail.module.scss
+++ b/app/detail/[id]/food-detail.module.scss
@@ -12,6 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 .image {
   align-items: center;
@@ -21,7 +22,8 @@
   background-repeat: repeat;
   position: absolute;
   width: 100%;
-  height: calc(100% - 111px);
+  // height: calc(100% - 111px);
+  min-height: 100%;
   box-shadow: inset 0 0 0 100vmax #ffc83c58;
 
   filter: blur(2px);
@@ -30,4 +32,9 @@
 .image,
 .content {
   z-index: 2;
+}
+@media only screen and (max-width: 700) {
+  .blur {
+    height: auto;
+  }
 }
