--- a/components/Search/search.module.scss
+++ b/components/Search/search.module.scss
@@ -32,3 +32,13 @@
     cursor: pointer;
   }
 }
+@media only screen and (max-width: 720px) {
+  .container {
+    width: 100%;
+    padding: 20px;
+  }
+  .content {
+    // padding: 0;
+    width: 100%;
+  }
+}
