--- a/components/Search/search.module.scss
+++ b/components/Search/search.module.scss
@@ -104,6 +104,7 @@
       .searchResultBoxContentText {
         p {
           display: -webkit-box;
+          line-clamp: 3;
           -webkit-line-clamp: 3;
           -webkit-box-orient: vertical;
           overflow: hidden;
