--- a/app/detail/[id]/food-detail.module.scss
+++ b/app/detail/[id]/food-detail.module.scss
@@ -2,7 +2,7 @@
   padding-inline: 20px;
   max-width: 1440px;
   margin: 0 auto;
-  background-color: white;
+  background-color: var(--background-color);
   padding-block: 64px;
   border-radius: 16px 16px 0 0;
 }
