--- a/components/Search/search.module.scss
+++ b/components/Search/search.module.scss
@@ -25,8 +25,10 @@
   padding-inline-end: 20px;
   width: 50%;
   transition: top 1s ease-in-out, transform 1s ease-in-out,
-    margin-top 1s ease-in-out;
+  margin-top 1s ease-in-out;
+  background-color: var(--background-container-color);
   .searchInput {
+    background-color: var(--background-container-color);
     width: 100%;
     height: 85px;
     border-radius: 8px;
@@ -78,6 +80,7 @@
   border-radius: 0 0 8px 8px;
   overflow-x: hidden;
   .searchResultBoxContent {
+    background-color: var(--background-container-color);
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
