--- a/components/NavBar/navbar.module.scss
+++ b/components/NavBar/navbar.module.scss
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  
+
   h1 {
     font-size: 1.5rem;
   }
@@ -37,7 +37,7 @@
   span {
     width: 100%;
     height: 3px;
-    background-color: #000;
+    background-color: var(--text-color);
     transition: all 0.3s ease;
   }
 }
@@ -54,11 +54,11 @@
     left: 0;
     right: 0;
     flex-direction: column;
-    background-color: white;
+    background-color: var(--background-color);
     padding: 1rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
-    
+    z-index: 3;
     &.active {
       display: flex;
     }
