--- a/components/FoodList/food-list.module.scss
+++ b/components/FoodList/food-list.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
+  height: fit-content;
 }
 @media screen and (max-width: 1400px) {
   .container {
