--- a/app/detail/[id]/food-detail.module.scss
+++ b/app/detail/[id]/food-detail.module.scss
@@ -16,6 +16,8 @@
 }
 .image {
   align-items: center;
+  width: 1080px;
+  height: 720px;
 }
 .blur {
   background-image: url("../../../assets/images/bg\ dark.jpg");
