--- a/components/NavBar/navbar.module.scss
+++ b/components/NavBar/navbar.module.scss
@@ -10,7 +10,11 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-
+  img {
+    width: 64px;
+    height: 64px;
+    object-fit: contain;
+  }
   h1 {
     font-size: 1.5rem;
   }
