--- a/components/FoodList/food-list.module.scss
+++ b/components/FoodList/food-list.module.scss
@@ -23,3 +23,10 @@
   }
 }
 
+@media screen and (max-width: 700px) {
+  .container {
+    grid-template-columns: repeat(1, minmax(350px, 1fr));
+    gap: 1.5rem;
+    padding: 0.75rem;
+  }
+}
